lld/test/error-atom-type.objtxt
# RUN: not lld -core %s 2> %t.err
# RUN:   FileCheck < %t.err %s

#
# Test that an unknown content type produces a readable error.
#

---
defined-atoms:
    - name:         entry
      scope:        hidden
      type:         superluminal
      dead-strip:   never
  
...


# CHECK:       error: unknown enumerated scalar
# CHECK:       superluminal
